--- a/Index.html
+++ b/Index.html
@@ -87,7 +87,7 @@
     <div class="container-floud">
         <div class="row about">
         <div class="col-md-6 col-lg-6">
-            <img class="animated fadeInRight img img-thumbnail" src="https://www.gstatic.com/webp/gallery/1.jpg">
+            <img class="animated fadeInRight img img-thumbnail" src="https://via.placeholder.com/660x445">
         </div>
         <div class="about-2 text-center col-md-6 col-lg-6">
             <h1 class="animated fadeIn delay-1s about_text">About us</h1>
