--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,187 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Error</title>
+    <title>Welcome</title>
+            <!--Css links-->
+
+            <link rel="stylesheet" href="css/bootstrap.min.css">
+            <link rel="stylesheet" href="css/font-awesome.min.css">
+            <link rel="stylesheet" href="css/material-design-iconic-font.min.css">
+            <link rel="stylesheet" href="css/magnific-popup.css">
+            <link rel="stylesheet" href="css/venobox.css">
+            <link rel="stylesheet" href="css/meanmenu.min.css">
+            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="css/animate.min.css">
+            <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
+
+
+
 <body>
-<h1 style="text-align:center;color:red;padding-top:400px;">no pages will be displayed because i am busy...</h1>
+    <!--header strat-->
+
+    <!--header end-->
+<!-- Navbar start-->
+        <section>
+            <div class="container-floud">
+                    <nav class="navbar navbar-default fixed-top bg-white navbar-expand-sm">
+                            <a class="navbar-brand" href="#">Logo</a>
+                            <button class="navbar-toggler" data-toggle="collapse" data-target="#navmenu">
+                                <!--<span class="toggler-icon"></span>-->
+                                <span class="line"></span> 
+                                <span class="line"></span> 
+                                <span class="line" style="margin-bottom: 0;"></span>
+                            </button>
+                            <div class="collapse navbar-collapse navlink" id="navmenu">
+                            <ul class="navbar-nav ml-auto navbarlink">
+                                <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#about">about</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#services">services</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">gallary</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">contact</a></li>
+                            </ul>
+                        </div>
+                        </nav>
+             </div>
+        </section>  
+<!-- Navbar end-->      
+<!--carousal start -->
+        <section>
+        <div class="container-floud">
+            <div id="hero-slides" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#hero-slides" data-slide-to="0" class="active"></li>
+                    <li data-target="#hero-slides" data-slide-to="1"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="img/hero/hero1.jpg" alt="First slide">
+                            <div class="carousel-caption  text-left">
+                                <h1 class="animated fadeInLeft delay-1s heading" >We’re green soul & We Care You</h1>
+                                <p class="animated fadeInLeft delay-1s pera-text">There are many variations of passages of Lorem Ipsum available,<br> but the majority ha suffd alteration in some form, by injected humour, or randomised words whic't look even slightly believable. If you are going to use a passage.</p>
+                            <!--<a href="#" class="learn-more wow cusFadeInRight" data-wow-duration=".5s" data-wow-delay="1.5s">Learn More</a>  -->
+                            </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="img/hero/hero2.jpg" alt="Second slide">
+                            <div class="carousel-caption text-right">
+                                <h1 class="animated fadeInRight delay-1s heading">We’re green soul & We Care You</h1>
+                                <p class="animated fadeInRight delay-1s pera-text">There are many variations of passages of Lorem Ipsum available, but the majority ha suffd alteration in some form, by injected humour, or randomised words whic't look even slightly believable. If you are going to use a passage.</p>
+                            <!--<a href="#" class="learn-more wow cusFadeInRight" data-wow-duration=".5s" data-wow-delay="1.5s">Learn More</a>-->
+                            </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#hero-slides" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#hero-slides" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            </div>
+         </section>
+   <!--courosal end-->
+   <!--about content-->
+   <section>
+    <div class="container-floud" id="about">
+        <div class="row about">
+        <div class="col-md-6 col-lg-6">
+            <img class="animated fadeInRight img " src="https://via.placeholder.com/660x445">
+        </div>
+        <div class="about-2 text-center col-md-6 col-lg-6">
+            <h1 class="animated fadeIn delay-1s text-center about_text">About us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        </div>
+    </div>
+</section>
+<!--about content-->
+<!-- services start-->
+
+<!-- services start-->
+<section>
+<div id="our-services">
+		<div class="container animated">
+			<div class="row">
+				<div class="text-center service-header" data-aos="zoom-in">
+					<h2>Our Services</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam aliquid adipisci sequi maiores . Ipsam aliquid adipisci sequi maiores .</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="services animated" data-aos="fade-left">
+						<div class="desc">
+							<h3>Diagnostic</h3>
+							<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo, esse nisi. Odio sapiente repellendus ullam.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="services" data-aos="fade">
+						<div class="desc">
+							<h3>Restorative Solution</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni reiciendis iure itaque similique quas quod!</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="services" data-aos="fade-right">
+						<div class="desc">
+							<h3>Additional Treatment</h3>
+							<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum non amet assumenda animi quas nulla sunt dolorum adipisci ex officiis!</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="services" data-aos="fade-left">
+						<div class="desc">
+							<h3>Heart Surgery</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum illo nobis autem. Veniam nam iure ab, deleniti perspiciatis cupiditate culpa.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="services" data-aos="fadeOut">
+						<div class="desc">
+							<h3>General Treatment</h3>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quia. Delectus similique doloribus ipsa sit ipsum ratione laudantium aperiam ducimus.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="services" data-aos="fade-right">
+						<div class="desc">
+							<h3>Medical Treatment</h3>
+							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus accusantium veniam id sequi eaque! Harum illum quod sint minus aut!</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<section>
+    <!--products section-->
+    
+    <!--products section-->
+   <!--Footer start-->
+
+<!--Footer end-->
+    <!-- all js here -->
+    <script src="js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.ajaxchimp.min.js"></script>
+    <script src="js/jquery.meanmenu.js"></script>
+    <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
